--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,6 @@
 @import "libs/bootstrap-reboot.min";
+@import 'base/mixins';
+@import 'base/variables';
 
 @font-face {
     font-family: "Roboto Condensed";
@@ -60,4 +62,15 @@
     padding: 0;
 }
 
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
+
+@import 'blocks/ship';
+@import 'blocks/text';
+@import 'blocks/question';
+@import 'blocks/btn';
+@import 'blocks/advantages';
+@import 'blocks/more-ship';
 
